--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2021"
 [dependencies]
 pest = "2.7.2"
 pest_derive = "2.7.2"
+
+[dev-dependencies]
+lazy_static = "1.4.0"
+pest-test = "0.1.5"
+pest-test-gen = "0.1.6"
