One test passing, one failing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,4 @@ pest-test = "0.1.5"
 pest-test-gen = "0.1.6"
 
 [patch.crates-io]
-pest-test = { path = "../pest-test/pest-test" }
+pest-test = { git = "https://github.com/jdidion/pest-test.git" }
